# nixie-3

./: .gitignore  Cargo.toml  build.sh  disassembly.demangled.txt  disassembly.txt  dump.txt  index.ts  main.npdm  run-and-debug.nu  run-and-debug.ps1  run-and-debug.sh  rustfmt.toml
.cargo/: config.toml
fileforge-horizon/: Cargo.toml
fileforge-horizon/src/: lib.rs
fileforge-horizon/src/hipc/: buffer.rs  header.rs  mod.rs  receive_static.rs  special_header.rs  static.rs
nixie-sdk/: Cargo.toml
nixie-sdk/src/: entrypoint.rs  lib.rs  util.rs
nixie-sdk/src/result/: mod.rs  result_code.rs  result_code_modules.rs
nixie-sdk/src/svc/: accept_session.rs  arbitrate_lock.rs  arbitrate_unlock.rs  break.rs  break_debug_process.rs  cancel_synchronization.rs  clear_event.rs  close_handle.rs  connect_to_named_port.rs  connect_to_port.rs  continue_debug_event.rs  control_code_memory.rs  create_code_memory.rs  create_event.rs  create_port.rs  create_process.rs  create_resource_limit.rs  create_session.rs  create_shared_memory.rs  create_thread.rs  create_transfer_memory.rs  debug_active_process.rs  exit_process.rs  exit_thread.rs  flush_data_cache.rs  flush_entire_data_cache.rs  flush_process_data_cache.rs  get_current_processor_number.rs  get_debug_event.rs  get_info.rs  (+67 more)
nixie-test/: Cargo.toml
nixie-test/src/: main.rs  reloc.rs
src/: main.rs  module.rs  reloc.rs  svc.rs
src/ipc/: mod.rs
src/svc/: handle.rs  mod.rs  process.rs  session.rs  thread.rs
src/util/: align.rs  allocator.rs  debug_log.rs  magic.rs  mod.rs  module.rs  reader.rs  result.rs  tls.rs  writer.rs
(+36 files in other folders)
